fix the image scale on mobile browser

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,10 @@ section {
 }
 
 .about img{
-    width: 600px;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    display: block;
     padding-bottom: 20px;
 }
 
